[package]
name = "calculate_etag"
version = "0.1.0"
authors = ["Bernard Niset"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
err-derive = "0.1"
rust-crypto = "0.2.36"

[dependencies.structopt]
version = "0.3.5"
optional = true

[[bin]]
name = "calculate_etag"
path = "src/main.rs"
doc = false
required-features = ["cli"]

[lib]
name = "calculate_etag"

[features]
default = [ "cli" ]
cli = [ "structopt" ]